--- a/custom/cirno-basketball/model1.yaml
+++ b/custom/cirno-basketball/model1.yaml
@@ -5,7 +5,7 @@
 # Task docs: https://docs.ultralytics.com/tasks/detect
 
 # Parameters
-nc: 5 # number of classes
+nc: 80 # number of classes
 scales: # model compound scaling constants, i.e. 'model=yolo11n.yaml' will call yolo11.yaml with scale 'n'
   # [depth, width, max_channels]
   n: [0.50, 0.25, 1024] # summary: 181 layers, 2624080 parameters, 2624064 gradients, 6.6 GFLOPs
@@ -22,21 +22,21 @@ backbone:
   - [-1, 2, C3k2, [256, False, 0.25]]
   - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
   - [-1, 2, C3k2, [512, False, 0.25]]
-  - [-1, 1, CoordAtt, [128, 16]]  # [x]
+  - [-1, 1, nn.Identity, []] #  - [-1, 1, CoordAtt, [128, 16]]  # [x]
   - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
   - [-1, 2, C3k2, [512, True]]
-  - [-1, 1, MSCA,[]] # [x]
+  - [-1, 1, nn.Identity, []] #  - [-1, 1, MSCA,[]] # [x]
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
   - [-1, 2, C3k2, [1024, True]]
-  - [-1, 1, ECA, [1024, 255]]  # [x]
-  - [-1, 1, SPPF_LSKA, [256, 5]] # [x]: 9 # - [[16, 19, 22], 1, Detect, [nc]]
-  - [-1, 2, C2PSA, [1024]] # 10 # TODO: 12
+  - [-1, 1, nn.Identity, []] #  - [-1, 1, ECA, [1024, 255]]  # [x]
+  - [-1, 1, SPPF, [1024, 5]] # 9  - [-1, 1, SPPF_LSKA, [256, 5]]
+  - [-1, 2, C2PSA, [1024]] # 10
 
 # YOLO11n head
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 7], 1, Concat, [1]] # cat backbone P4
-  - [-1, 2, C3k2, [512, False]] # 13 # TODO: 16
+  - [-1, 2, C3k2, [512, False]] # 13
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
@@ -51,5 +51,3 @@ head:
   - [-1, 2, C3k2, [1024, True]] # 22 (P5/32-large)
 
   - [[19, 22, 25], 1, Detect, [nc]] # Detect(P3, P4, P5)
-
-
