--- a/custom/cirno-basketball/model1.yaml
+++ b/custom/cirno-basketball/model1.yaml
@@ -22,14 +22,14 @@ backbone:
   - [-1, 2, C3k2, [256, False, 0.25]]
   - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
   - [-1, 2, C3k2, [512, False, 0.25]]
-  - [-1, 1, nn.Identity, []] #  - [-1, 1, CoordAtt, [128, 16]]  # [x]
+  - [-1, 1, CoordAtt, [128, 16]] # [x]
   - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
   - [-1, 2, C3k2, [512, True]]
-  - [-1, 1, nn.Identity, []] #  - [-1, 1, MSCA,[]] # [x]
+  - [-1, 1, MSCA, []] # [x]
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
   - [-1, 2, C3k2, [1024, True]]
-  - [-1, 1, nn.Identity, []] #  - [-1, 1, ECA, [1024, 255]]  # [x]
-  - [-1, 1, SPPF, [1024, 5]] # 9  - [-1, 1, SPPF_LSKA, [256, 5]]
+  - [-1, 1, ECA, []] #  - [-1, 1, ECA, []]  # [x]
+  - [-1, 1, SPPF_LSKA, [1024, 5]] # 9 # [x]
   - [-1, 2, C2PSA, [1024]] # 10
 
 # YOLO11n head
